--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <p id="demo">Here We Load Data</p>
+    <button onclick="loadData()">Click</button> -->
+
+    <!-- <form action="" id="myForm">
+        Title <input type="text" id="titleText"> <br> <br>
+        Body  <input type="text" id="bodyText"> <br> <br>
+        User Id <input type="text" id="userid"> <br> <br>
+        <input type="submit" id="saveForm">
+    </form> -->
+
     <script type="module" src="script.js"></script>
 </body>
 </html>
