--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <p id="demo">Here We Load Data</p>
-    <button onclick="loadData()">Click</button> -->
+    <!-- <p id="demo" class="para text">Here We Load Data</p>  -->
+    <!-- <ul class="li">
+        <li class="child">1</li>
+        <li class="child">2</li>
+        <li class="child">3</li>
+    </ul> -->
+    <!-- <button onclick="loadData()">Click</button> -->
 
     <!-- <form action="" id="myForm">
         Title <input type="text" id="titleText"> <br> <br>
@@ -17,6 +22,47 @@
         <input type="submit" id="saveForm">
     </form> -->
 
+    <!-- <div id="container">
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+    </div> -->
+
+   <!-- <p>I am learning js</p>  -->
+
+    <script>
+        // "use strict";                
+        // d = 39;
+        // console.log(d);
+        // let a = 34;
+        // console.log(a);
+        // document.addEventListener("click", function(){
+        //     alert("clicked");
+        // });
+        // let arr = [34, 32, 31];
+        // arr.forEach(element => {
+            
+        // });
+        // let date = new Date();
+        // console.log(date);
+
+    //     let mobj = {
+    //         func : (number) => {
+    //         console.log("Number is" + this);
+    //     }
+    // }
+    //     mobj.func();
+
+    // setTimeout(() => {
+    //     console.log("3 second")
+    // }, 3000);
+    // console.log("immidiately");
+
+    // (function(){
+    //     alert("hi");
+    // })()
+    </script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
